# Moxie-Api

./: .gitignore  CLAUDE.V2.md  CLAUDE.md  CONTRIBUTING.md  PLUGINS.MD  README.md  app.py  pyproject.toml
.github/workflows/: pypi-publish.yml
examples/: hello.py  pydantic_validation.py
moxie/: __init__.py  app.py  background.py  config.py  exceptions.py  health.py  plugins.py  request.py  response.py  router.py  testing.py  types.py
moxie/di/: container.py  depends.py
moxie/guards/: __init__.py  apikey.py  base.py  bearer.py  jwt.py
moxie/middleware/: __init__.py  base.py  cors.py  exceptions.py  gzip.py  https_redirect.py  logging.py  requestid.py  trusted_host.py
moxie/openapi/: __init__.py  builder.py  extractor.py  models.py  schema.py  ui.py
moxie/plugins/: firebase.py  sqlalchemy.py  supabase.py
moxie/routing/: __init__.py  converters.py  matcher.py  static.py
moxie/utils/: concurrency.py  encoding.py
moxie_cli/: __init__.py  main.py
moxie_cli/commands/: __init__.py  dev.py  new.py  openapi.py  routes.py
tests/: test_middleware.py  test_pydantic.py
