[project]
name = "moxie-api"
version = "2.0.6"
description = "A fast, expressive, Python-native web framework with auto OpenAPI docs."
readme = "README.md"
authors = [
    { name = "Moxie Team" }
]
dependencies = [
    "anyio>=4.0.0",
    "httptools>=0.6.0",
    "h11>=0.14.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "click>=8.1.0",
]
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools]
packages = ["moxie", "moxie_cli", "moxie.routing", "moxie.openapi", "moxie.middleware", "moxie.di", "moxie.guards", "moxie.utils"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "pyright>=1.1.330",
    "supabase>=2.28.3",
    "firebase-admin>=7.4.0",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.31.0",
    "python-multipart>=0.0.26",
    "multipart>=1.3.1",
    "uvicorn>=0.23.0",
]
full = [
    "moxie-api[dev]",
]

[project.scripts]
moxie = "moxie_cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
typeCheckingMode = "strict"
include = ["moxie"]
